package com.eduaircontrol.backend.application.dto;

import lombok.*;

@Getter
@AllArgsConstructor
public class AuthResponse {
    private String token;
}
