package com.eduaircontrol.backend.modules.auth.entity;

public enum Role {
    USER,
    ADMIN
}
